--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="nav-buttons">
-          <a class="header-logo" href="./index.html"
+          <a class="logo header-logo" href="./index.html"
             >Web<span class="logo-contrast">Studio</span></a
           >
           <ul class="header-menu-list">
@@ -54,6 +54,11 @@
             </li>
           </ul>
         </address>
+        <button class="burger-btn" type="button">
+          <svg class="burger-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
