--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           </svg>
         </button>
       </div>
-      <div class="mobile-menu is-open">
+      <div class="mobile-menu is-ope">
         <div class="container mobile-menu-container">
           <button class="mobile-menu-close"></button>
           <nav class="mobile-menu-nav"></nav>
@@ -78,12 +78,12 @@
 
     <main>
       <!-- Hero -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- Our advantages -->
       <!-- <section class="advantages section">
