--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
           </ul>
         </div>
         <div class="subscribe-container">
-          <p class="subscribe-text">Subscribe</p>
+          <p class="subscribe-text footer-social">Subscribe</p>
           <form class="subscribe-form">
             <label class="subscribe" for="input-subscribe">
               <input
