--- a/index.html
+++ b/index.html
@@ -63,14 +63,69 @@
       </div>
       <div class="mobile-menu is-ope">
         <div class="container mobile-menu-container">
-          <button class="mobile-menu-close"></button>
-          <nav class="mobile-menu-nav"></nav>
-          <address></address>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+          <button class="mobile-menu-close" type="button">
+            <svg class="close-btn-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list">
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link current" href="">Studio</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="">Portfolio</a>
+              </li>
+              <li class="mobile-menu-item">
+                <a class="mobile-menu-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address>
+            <ul class="mobile-contact-list">
+              <li class="mobile-contact-item">
+                <a
+                  class="mobile-contact-link link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-contact-item">
+                <a class="mobile-contact-link link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <ul class="menu-icons-list">
+            <li class="icons-item">
+              <a href="" class="menu-icons-link">
+                <svg class="menu-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-item">
+              <a href="" class="menu-icons-link">
+                <svg class="menu-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-item">
+              <a href="" class="menu-icons-link">
+                <svg class="menu-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icons-item">
+              <a href="" class="menu-icons-link">
+                <svg class="menu-social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -670,7 +725,7 @@
     </footer>
 
     <!-- MODAL -->
-    <!-- <div class="backdrop is-open">
+    <div class="backdrop is-ope">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-btn-icon" width="8" height="8">
@@ -747,13 +802,15 @@
                 <svg class="accept-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-select"></use>
                 </svg> </span
-              >I accept the terms and conditions of the
-              <a class="policy-url" href="">Privacy Policy</a></label
+              ><span class="accept-link">
+                I accept the terms and conditions of the
+                <a class="policy-url" href="">Privacy Policy</a>
+              </span></label
             >
           </div>
           <button class="send-btn" type="submit">Send</button>
         </form>
       </div>
-    </div> -->
+    </div>
   </body>
 </html>
